[~] Fix horizontal scrolling

--- a/web/src/styles/global.css
+++ b/web/src/styles/global.css
@@ -7,5 +7,6 @@
 }
 
 body {
+  overflow-x: hidden;
   font-family: 'EF Circular Web', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
